# CF-LIBS-improved

./: .adr-0001-baseline-cov.txt  .beads  .gitignore  .swarm-progress.txt  AGENTS.md  API_Reference.html  CF-LIBS_Codebase_Technical_Documentation.html  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT_GUIDE_V1.md  Database_Generation.html  Deployment.html  Echellogram_Processing_Guide.html  Evolution_Framework.html  HIGH_THROUGHPUT_FRAMEWORK.md  Hardware_Interfaces.html  Justfile  M-spec-boltzmann-convention-literature-verdict.html  M-spec-estimator-routing-policy.html  M-spec-lever-comparison.html  M-spec-solver-head-to-head.html  M-spec-target-sigma-wiring-findings.html  M5-atomic-db-heldout-verdict.html  M5-db-accuracy-campaign-plan.html  M5-db-accuracy-findings.html  M5-parameter-optimization-plan.html  M5-pipeline-sensitivity-study.html  MERGE_PLAN.md  Manifold_Generation_Guide.html  Quick_Start_For_Scientists.html  README.md  REFERENCE_ANALYSIS_LIBSSA.html  ROADMAP.md  User_Guide.html  VALD-ExoMol-hybrid-completion-guide.html  VALD-completion-download-guide.html  VALIDATION_METRICS.html  arbor-integration.html  (+33 more)
.beads/: .gitignore  README.md  config.yaml  issues.jsonl  metadata.json
.claude/: gpd-file-manifest.json  settings.json  settings.local.json
.config/: wt.toml
.doctrees/: API_Reference.doctree  CF-LIBS_Codebase_Technical_Documentation.doctree  Database_Generation.doctree  Deployment.doctree  Echellogram_Processing_Guide.doctree  Evolution_Framework.doctree  Hardware_Interfaces.doctree  M-spec-boltzmann-convention-literature-verdict.doctree  M-spec-estimator-routing-policy.doctree  M-spec-lever-comparison.doctree  M-spec-solver-head-to-head.doctree  M-spec-target-sigma-wiring-findings.doctree  M5-atomic-db-heldout-verdict.doctree  M5-db-accuracy-campaign-plan.doctree  M5-db-accuracy-findings.doctree  M5-parameter-optimization-plan.doctree  M5-pipeline-sensitivity-study.doctree  Manifold_Generation_Guide.doctree  Quick_Start_For_Scientists.doctree  REFERENCE_ANALYSIS_LIBSSA.doctree  User_Guide.doctree  VALD-ExoMol-hybrid-completion-guide.doctree  VALD-completion-download-guide.doctree  VALIDATION_METRICS.doctree  arbor-integration.doctree  atomic-db-latency-ADR-0007-investigation.doctree  basis-libraries.doctree  bench-pause.doctree  dataset-sharding.doctree  environment.pickle  federation.doctree  index.doctree  jax-compile-cache.doctree  nfs-shared-data.doctree  results-parquet-schema.doctree
.github/: PULL_REQUEST_TEMPLATE.md
.gpd/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  state.json  state.json.bak
.swarm/: benchmark.toml  file-affinity.toml  identifier-f1-baseline.json  identifier-paths.txt  intent-contracts.jsonl  meta-insights.jsonl  mutation-archive.jsonl  profile.toml  quality-trend.jsonl  reformulations.jsonl  verify.sh
ASD_da/: ASD_da  STANDARD_DB_MANIFEST.json  libs_production.db
_sources/: API_Reference.md.txt  Database_Generation.md.txt  Evolution_Framework.md.txt  M-spec-lever-comparison.md.txt  Quick_Start_For_Scientists.md.txt  User_Guide.md.txt  VALIDATION_METRICS.md.txt  arbor-integration.md.txt  atomic-db-latency-ADR-0007-investigation.md.txt  dataset-sharding.md.txt  jax-compile-cache.md.txt
adr/: ADR-0001-HANDOFF.html  ADR-0001-RUNBOOK.html  ADR-0001-empirical-analysis-2026-05-13.html  ADR-0001-radis-jaxrts-pattern-survey.html  ADR-0002-no-generic-predictor-factory.html  ADR-0004-jittable-inversion-pipeline.html  ADR-0005-jitpipe-promotion.html  ADR-0006-instrument-calibration-first-class.html
architecture/: 2026-05-26-architecture-review.html  2026-05-27-physics-audit.html  2026-06-03-candidate-count-fragility-audit.html  2026-06-03-composition-pipeline-diagnosis.html  2026-06-04-bhvo2-composition-root-cause.html  2026-06-04-pipeline-accuracy-roadmap.html  2026-06-05-physics-audit-wave2.html  codebase-audit-2026-05-19.html  codebase-audit-2026-05-20.html
atomic_data/: kramida_2024_delta.html
audit/: 2026-06-15-id-f1-rootcause-w3-corpus.html  2026-06-15-id-f1-rootcause.html  2026-06-16-alias-faithful-fix.html  2026-06-16-alias-recall-levers.html
benchmarks/: GATE-FINDINGS-2026-06-19.html  M7-GATE-FINDINGS-2026-06-20.html  SCOREBOARD-2026-06-10-baseline.html  SCOREBOARD-2026-06-19-jit-vs-reference.html  __init__.py  analyze_results.py  bench_anderson.py  bench_batch_forward.py  bench_boltzmann.py  bench_e2e_pipeline.py  bench_faiss.py  bench_voigt.py  common.py  stark-vjbh-empirical-impact.html
cflibs/: __init__.py
config/: profiles.yaml
data/: chemcam_calib  csa_planetary_libs  data  gibbons2024_nitrogen_libs  silva2022_tropical_soils  vrabel2020_soil_benchmark
design/: instrument-calibration.html  manifold_accelerated_identification.html
docs/: API_Reference.md  CF-LIBS_Codebase_Technical_Documentation.md  CODEEVOLVE_WAVE2_PLAN.md  Deployment.md  M-spec-estimator-routing-policy.md  M-spec-solver-head-to-head.md  M-spec-target-sigma-wiring-findings.md  M5-atomic-db-heldout-verdict.md  M5-db-accuracy-campaign-plan.md  M5-db-accuracy-findings.md  M5-parameter-optimization-plan.md  M5-pipeline-sensitivity-study.md  Manifold_Generation_Guide.md  Quick_Start_For_Scientists.md  README.md  User_Guide.md  VALD-ExoMol-hybrid-completion-guide.md  VALD-completion-download-guide.md  VALIDATION_METRICS.md  basis-libraries-consultation.md  basis-libraries.md  bench-pause.md  conf.py  dataset-sharding.md  exp001-autonomous-plan.md  federation.md  index.rst  jax-cache-and-pause-consultation.md  jax-compile-cache.md  nfs-shared-data.md  results-parquet-schema.md
examples/: config_example.yaml  config_ti64.yaml  inversion_config_example.yaml  manifold_config_example.yaml  manifold_smoke_config.yaml  scipp_cflibs_pipeline.py
jax-port/: alias-consultation.html  comb-correlation-consultation.html  iterative-boltzmann-consultation.html  line-detection-consultation.html  nnls-consultation.html
native/cflibs-core/: Cargo.toml  pyproject.toml
native/cflibs-core/src/: comb_matching.rs  lib.rs  partition.rs  types.rs
rust-plugin/: Cargo.toml
rust-plugin/src/: lib.rs  module.rs  py_interface.rs
(+2127 files in other folders)
