[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cflibs"
version = "0.1.0"
description = "Calibration-Free Laser-Induced Breakdown Spectroscopy library"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "TheFermiSea"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pandas>=2.0.0",
    "pyyaml>=6.0.0",
    "matplotlib>=3.7.0",
]

[project.optional-dependencies]
# JAX for CPU-only (cross-platform, includes Apple Silicon)
jax-cpu = ["jax[cpu]>=0.4.26"]
# JAX for NVIDIA GPU (CUDA) - for cluster deployment
jax-cuda = ["jax[cuda12]>=0.4.26"]
# HDF5 for manifold storage
hdf5 = ["h5py>=3.8.0"]
# Vector index for fast similarity search
vector = ["faiss-cpu>=1.7.0"]
# Bayesian inference (MCMC, nested sampling)
bayesian = [
    "numpyro>=0.14.0",
    "arviz>=0.17.0",
]
# Uncertainty propagation for classical inversion
uncertainty = ["uncertainties>=3.2.0"]
# Interactive Jupyter widgets for visualization
widgets = [
    "ipywidgets>=8.0.0",
    "plotly>=5.0.0",
]
# Physics-Informed Neural Networks (requires JAX + Equinox + Optax)
pinn = [
    "jax>=0.4.26",
    "equinox>=0.11.0",
    "optax>=0.2.0",
]
# Rust computational core (comb matching, partition functions)
rust = ["cflibs-core"]
# Development dependencies
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-benchmark>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
    "types-PyYAML>=6.0.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
    "myst-parser>=2.0.0",
]
# Full installation for local development (Apple Silicon uses CPU backend)
local = [
    "jax[cpu]>=0.4.26",
    "h5py>=3.8.0",
    "faiss-cpu>=1.7.0",
    "numpyro>=0.14.0",
    "arviz>=0.17.0",
    "uncertainties>=3.2.0",
    "ipywidgets>=8.0.0",
    "plotly>=5.0.0",
    "equinox>=0.11.0",
    "optax>=0.2.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-benchmark>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
]
# Full installation for cluster deployment (CUDA)
cluster = [
    "jax[cuda12]>=0.4.26",
    "h5py>=3.8.0",
    "faiss-cpu>=1.7.0",
    "numpyro>=0.14.0",
    "arviz>=0.17.0",
    "uncertainties>=3.2.0",
    "equinox>=0.11.0",
    "optax>=0.2.0",
    "mpi4py>=3.1.0",
]

[project.scripts]
cflibs = "cflibs.cli.main:main"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
# JAX/optional-import redefinitions and no-any-return from numpy/pandas; fix incrementally
disable_error_code = ["no-redef", "misc", "no-any-return"]

# Incremental typing: disable noisy codes in cflibs until fixed (optional imports, Array/ndarray, etc.)
[[tool.mypy.overrides]]
module = "cflibs.*"
disable_error_code = [
    "assignment",
    "arg-type",
    "attr-defined",
    "return-value",
    "dict-item",
    "operator",
    "call-arg",
]

[tool.ruff]
line-length = 100
target-version = "py38"

# NOTE: pytest configuration lives in pytest.ini (which takes precedence).
# Do NOT add [tool.pytest.ini_options] here -- it will drift out of sync.
